<resources>
    <string name="app_name">HomeStuff</string>
    <string name="facebook_application_id">264238844587426</string> <string name="facebook_login_protocol_scheme">fb264238844587426</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="esci">Esci dal profilo</string>
    <string name="servizioCompletatoOk">Compito famigliare correttamente completato</string>
    <string name="erroreDati">Si è verificato un errore durante la transizione dei dati</string>
    <string name="noFamiglia">Il profilo non ha una famiglia associata</string>
    <string name="servizioCompletatoTitolo">Compito famigliare</string>
    <string name="servizioCompletato">Il compito famigliare è stato completato?</string>
    <string name="noAccessoServizio">Il compito famigliare selezionato è associato ad un altro utente. Operazione non completabile</string>
    <string name="nomeServizio">Nome compito famigliare</string>
    <string name="servizioAggiunto">Compito famigliare aggiunto correttamente</string>
    <string name="servizioModificato">Compito famigliare modificato correttamente</string>
    <string name="nomeUtenteServizio">Chi deve svolgere il compito?</string>
    <string name="compilareDialogDomestica">Compilare tutte le informazioni necessarie</string>
    <string name="aggiungiServizioFamigliare">Aggiungi servizio famigliare</string>
    <string name="creaServizio">Crea</string>
    <string name="modificaServizio">Modifica</string>
    <string name="completaProfilo">Completare il profilo utente per utilizzare questa funzionalità</string>
    <string name="scegliFamiglia">Associare il profilo ad una famiglia per utilizzare questa funzionalità</string>
    <string name="serviziFamigliari">Compiti famigliari:</string>
    <string name="noServiziFamigliari">La tua famiglia non presenta compiti da svolgere</string>
    <string name="errore">Errore</string>
    <string name="nomeFamiglia">Nome famiglia</string>
    <string name="aggiungiMembroFamiglia">Aggiungi membro famigliare</string>
    <string name="aggiungiMembroFamigliaTitolo">Selezionare i membri della famiglia</string>
    <string name="noAggiungiMembroFamiglia">Non sono presenti utenti localizzati nella seguente posizione</string>
    <string name="creaFamigliaPulsante">Crea famiglia</string>
    <string name="famigliaAggiunta">Famiglia creata correttamente</string>
    <string name="modificaFamiglia">Modifica famiglia</string>
    <string name="esciFamiglia">Esci dalla famiglia</string>
    <string name="famigliaModificata">Famiglia modificata con successo</string>
    <string name="esciFamigliaOk">Sei uscito dalla famiglia</string>
    <string name="componentiFamiglia">Componenti famigliari</string>
    <string name="membriFamiglia">Numero membri:</string>
    <string name="creaFamiglia">Registra una nuova famiglia</string>
    <string name="login">Accedi</string>
    <string name="register">Registrati</string>
    <string name="errorSignIn">Si è verificato un errore durante la fase di autenticazione</string>
    <string name="errorSignUp">Si è verificato un errore durante la registrazione</string>
    <string name="infoRequiredRegister">Si necessitano tutte le informazioni</string>
    <string name="errorEmailRegister">Email inserita già utilizzata per un altro account</string>
    <string name="ok">Ok</string>
    <string name="sorgenteImmagineProfilo">Selezionare immagine sorgente</string>
    <string name="dettagliProfilo">Dettagli profilo</string>
    <string name="home">Home</string>
    <string name="profiloAggiornato">Profilo aggiornato correttamente</string>
    <string name="profilo">Profilo</string>
    <string name="famiglia">Famiglia</string>
    <string name="benvenutoTitle">Benvenuto</string>
    <string name="profiloTitolo">Profilo utente</string>
    <string name="famigliaTitolo">La tua famiglia</string>
    <string name="localizza">Clicca per localizzare</string>
    <string name="geoOk">Localizzazzione effettuata correttamente</string>
    <string name="geoError">Non è stato possibile memorizzare i dati relativi alla geolocalizzazione</string>
    <string name="cancella">Cancella</string>
</resources>
