<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/propic"
                android:background="@drawable/circle"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="-10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_perm_contact_calendar_black_24dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:layout_marginTop="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_firstName_profile"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cognome"
                android:layout_marginTop="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_lastName_profile"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_location_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:hint="@string/localizza"
                android:id="@+id/text_geo"/>

            <ImageButton
            android:layout_width="60dp"
            android:layout_marginTop="35dp"
            android:background="@android:color/white"
            android:layout_marginLeft="15dp"
            android:layout_height="60dp"
                android:id="@+id/img_location"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>



