<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/family"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/famigliaTitolo"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/my_family">

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="45dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_bookmark_black_24dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="25dp"
                        android:hint="@string/nomeFamiglia">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_family_name_show"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical" android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="45dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_people_black_24dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="40dp"
                            android:layout_marginLeft="70dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/componentiFamiglia"
                                android:textStyle="bold"
                                android:textSize="17dp"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/list_family_members_show"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"/>


                        </LinearLayout>

                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/round_button_shape"
                            android:src="@drawable/ic_person_add_black_24dp"
                            android:tint="@android:color/white"
                            android:elevation="2dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="50dp"
                            android:id="@+id/add_family_member_show" />
                    </RelativeLayout>
                </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="50dp">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/esciFamiglia"
                        android:id="@+id/leave_family"/>
                        <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/modificaFamiglia"
                        android:id="@+id/edit_family"
                        android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/new_family">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creaFamiglia"
            android:textStyle="bold"
            android:textSize="18dp"
            android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="45dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_bookmark_black_24dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="25dp"
                        android:hint="@string/nomeFamiglia">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_family_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical" android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="45dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_people_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="70dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/componentiFamiglia"
                            android:textStyle="bold"
                            android:textSize="17dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/list_family_members"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>


                    </LinearLayout>

                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/round_button_shape"
                            android:src="@drawable/ic_person_add_black_24dp"
                            android:tint="@android:color/white"
                            android:elevation="2dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="50dp"
                            android:id="@+id/add_family_member" />
                </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creaFamigliaPulsante"
                android:id="@+id/add_family"
                android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>

        </RelativeLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>